app/webpacker/styles/_subnav.scss
.app-body-wrapper {
  display: flex;
}

.app-pane__subnav {
  width: 260px;
  margin-left: -30px;
}

.app-pane__content {
  display: flex;
  min-width: 0;
  flex: 1 1 100%;
  flex-direction: column;
}


.app-subnav {
  // Since the back to top link is outside the flow of the document we need to create a space for it.
  // This number is magic and was determined by manually judging the visual spacing.
  margin-bottom: 100px;
  padding: 0 govuk-spacing(3) 0 0;
  @include govuk-font(16);

  // @include govuk-media-query($from: mobile) {
  //   color: red;
  // }
  @include govuk-media-query($until: tablet) {
    display: none;
  }

}





.app-subnav--mobile {

  display: none;

  &.is-open {
    display: block;

  }
}

.app-subnav--mobile .app-subnav__section {

  display: none;

}

.app-subnav--mobile .app-subnav__link.is-active + .app-subnav__section {

  display: block;

}







.js-app-mobile-nav-toggler.is-active::after {
display: inline-block;
width: 0;
height: 0;
border-style: solid;
border-color: transparent;
-webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
border-width: 0 5px 8.66px 5px;
border-bottom-color: inherit;
border-bottom-color: currentColor;
}


.app-subnav__section {
  margin: 0 0 govuk-spacing(4);
  padding: 0;
  list-style-type: none;
}

.app-subnav__link {
  padding: 2px 0;
  text-decoration: none;
  //display: block;

  &:not(:focus):hover {
    color: $govuk-link-colour;
    text-decoration: underline;
  }

}

.app-subnav__section-item {
  margin-bottom: govuk-spacing(1);
  padding-top: govuk-spacing(1);
  padding-bottom: govuk-spacing(1);
}

.app-subnav__section-item--current {
  $_current-indicator-width: 4px;
  margin-left: -(govuk-spacing(2) + $_current-indicator-width);
  padding-left: govuk-spacing(2);
  border-left: $_current-indicator-width solid govuk-colour("blue");
  background-color: govuk-colour("white");
}

.app-subnav__section-item--current .app-subnav__link {
  font-weight: bold;
}

.app-subnav__section--nested {
  margin-top: govuk-spacing(2);
  margin-bottom: 0;
  padding-left: govuk-spacing(4);
}

.app-subnav__section--nested .app-subnav__section-item::before {
  content: "—";
  margin-left: -(govuk-spacing(4));
  color: govuk-colour("dark-grey");
}

.app-subnav__section--nested .app-subnav__link {
  padding-left: 0;
  font-weight: normal;
  
}

.app-subnav__theme {
  margin: 0;
  padding: govuk-spacing(2) govuk-spacing(3) govuk-spacing(0) 0;
  font-size: govuk-px-to-rem(19px);
  font-weight: bold;
  &:first-of-type {

    padding-top: 0;
  }

}



// Subnav new styles

